--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
              <div class="flame"></div>
          </div>
      </div>
-    <h1><b>Mohit Rajak</b></h1> 
+    <h1><b>Hey this is Aaryan</b></h1> 
     <h2>Wishing you</h2>
     <h1 class="ml15">
         <span class="word">Happy</span>
