--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="word">Diwali</span>
       </h1>
       <h2>2024</h2>
-      <h1 class="credit">Made with <span style="color:tomato;font-size:20px;">❤</span> by <a  href="https://www.learningrobo.com/">Mohit Rajak</a></h1>
+      <h1 class="credit">Made <span style="color:tomato;font-size:20px;">❤</span> by Aaryan </h1>
   </div>
 </div>
 </div>
